--- a/less/index.less
+++ b/less/index.less
@@ -50,10 +50,45 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	// font-size: 62.5%;
+	border: 1px solid red;
 }
+
+.flexer{
+	display: flex;
+}
+
+.main-container{
+	margin: 0 5% 0 5%;
+}
+nav{
+	.flexer();
+	justify-content: flex-end;
+}
+a{
+	text-decoration: none;
+}
+a.space{
+	margin-right: 2%;
+}
+.top-content{
+	padding: 2%;
+	background-color: #E0FBFC;
+}
+img{
+	width: 35%;
+}
+.bottom-content{
+	.flexer();
+	
+	section{
+		width: 48%;
+		// border: 1px solid red;
+	} //end section
+}// end of container
 
