--- a/less/index.less
+++ b/less/index.less
@@ -59,36 +59,66 @@ html, body {
 	border: 1px solid red;
 }
 
-.flexer{
+@colors: #EE6C4D;
+
+@marg: 2%;
+
+.flexing{
 	display: flex;
+}
+.pad{
+	padding: 2%;
 }
 
 .main-container{
-	margin: 0 5% 0 5%;
+	margin: 0 15% 0 15%;
 }
 nav{
-	.flexer();
+	.flexing();
 	justify-content: flex-end;
-}
-a{
-	text-decoration: none;
-}
-a.space{
-	margin-right: 2%;
+
+	a{
+		text-decoration: none;
+		color: @colors;
+	}
+	a.space{
+		margin-right: @marg;
+	}
 }
 .top-content{
-	padding: 2%;
+	.pad();
 	background-color: #E0FBFC;
 }
 img{
 	width: 35%;
 }
-.bottom-content{
-	.flexer();
+.middle-content{
+	.flexing();
+	margin-top: 5%;
 	
-	section{
+	.objective, .skills{
 		width: 48%;
-		// border: 1px solid red;
-	} //end section
+	} //end of bottom classes
+	.objective p{
+		text-align: center;
+		margin-top: @marg;
+	}
 }// end of container
+.skills{
+	margin-bottom: @marg;
+	
+	.box{
+		border: 1px solid #98C1D9;
+		.pad();
+	}
+}
+.bottom-content div{
+	.flexing();
+	justify-content: space-around;
+	// flex-direction: column;
+}
+.description{
+	.flexing();
+	border: 1px solid red;
 
+}
